--- a/src/main/webapp/resources/footer/css/style.css
+++ b/src/main/webapp/resources/footer/css/style.css
@@ -1,7 +1,10 @@
 @charset "UTF-8";
 /* footer */
 footer {
-	clear: both;
+	border-top : 1px solid #EAEAEA;
+	position : fixed;
 	width: 100%;
 	height: 50px;
+	bottom: 5px;
+	text-align: center;
 }
