basic layout 설정
 body 설정

header.css 주석추가

footer.css 수정
 position 수정

--- a/src/main/webapp/resources/header/css/style.css
+++ b/src/main/webapp/resources/header/css/style.css
@@ -134,13 +134,14 @@ a.two-menu:active{
 	color: black;
 }
 
-/* 네비 */
+/* 챗봇 */
 .chatbot{
 	position: fixed;
 	bottom : 170px;
 	right: 30px;
 }
 
+/* 그룹챗 */
 .groupchat{
 	position: fixed;
 	bottom : 100px;
