--- a/src/main/webapp/resources/header/css/style.css
+++ b/src/main/webapp/resources/header/css/style.css
@@ -66,7 +66,7 @@ nav {
 	font-size : 20px; font-weight: bold;
 }
 
-.ul-header-one {margin:0 auto; width:790px }
+.ul-header-one {}
 .ul-header-one:after {content:''; display:block; zoom:1; clear:both}
 .one:hover ul{display: block;}
 
@@ -83,9 +83,9 @@ line-height: 30px;
 
 .ul-header-one li{
 	list-style: none;
-	float: left;
 	outline: 30px; 
 	margin:0 30px;
+	display: inline-block;
 	
 }
 
