--- a/src/main/webapp/resources/layout/css/layoutStyle.css
+++ b/src/main/webapp/resources/layout/css/layoutStyle.css
@@ -1,6 +1,8 @@
 @charset "UTF-8";
 
 .container{
+	margin-left : 150px;
+	margin-right : 150px;
 	margin-top : 50px;
 	margin-bottom : 10px;
 	width: 500px;
