--- a/src/main/webapp/resources/layout/css/layoutStyle.css
+++ b/src/main/webapp/resources/layout/css/layoutStyle.css
@@ -1,12 +1,8 @@
 @charset "UTF-8";
 
-.container{
-	margin-left : 150px;
-	margin-right : 150px;
+.mycontainer{
 	margin-top : 50px;
 	margin-bottom : 10px;
-	width: 500px;
+	width: 100%;
 	height: 745px;
 }
-
-
