--- a/src/main/webapp/resources/footer/css/footerStyle.css
+++ b/src/main/webapp/resources/footer/css/footerStyle.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /* footer */
 footer {
-	border-top : 1px solid #EAEAEA;
+	border-top : 1px solid silver;
 	width: 100%;
 	height: 50px;
 	bottom: 5px;
