--- a/src/main/webapp/resources/chatBot/css/chatBotStyle.css
+++ b/src/main/webapp/resources/chatBot/css/chatBotStyle.css
@@ -22,7 +22,9 @@
 	width : auto;
 	list-style: none;
 }
-
+.chatBotLi{
+	
+}
 .boatAnswer{
 	
 	border-radius: 6px;
@@ -31,10 +33,19 @@
     line-height: 22px;
     letter-spacing: -0.5px;
     color: #555;
+    left: 0;
 }
 
 
-
+.userLi{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    line-height: inherit;
+    word-break: break-word;
+    margin-top: 22px;
+    text-align: right;
+}
 .userQuestion{
 	border-radius: 6px;
     background-color: #fff;
@@ -42,8 +53,28 @@
     line-height: 22px;
     letter-spacing: -0.5px;
     color: #555;
+    right: 0;
 }
 
 .chatBotFooterContainer{
 	float: right;
+}
+
+.userInput{
+    position: relative;
+    width: 100%;
+    height: 22px;
+    max-height: 80px;
+    padding: 0;
+    border: none;
+    font-size: 14px;
+    color: #555;
+    line-height: 20px;
+    vertical-align: top;
+    box-sizing: border-box;
+    overflow-y: auto;
+    resize: none;
+}
+.questionBtn{
+    position: absolute;
 }
