--- a/src/main/webapp/resources/chatBot/css/chatBotStyle.css
+++ b/src/main/webapp/resources/chatBot/css/chatBotStyle.css
@@ -5,10 +5,11 @@
 	width: 500px;
 	height: 650px;
 }
+
 .chatBotHeader{
 	background-color: silver;
 	width: 100%;
-	height: 100px;
+	height: 50px;
 	margin-top: 0;
 }
 
@@ -16,53 +17,105 @@
 	width: 100%;
 	height : 480px;
 	background-color: #f2f2f2;
+	overflow: scroll;
 }
+
+.boxChatRoom{
+	
+}
+
 .chatBotUl{
 	display : inline-block;
-	width : auto;
+	width : 100%;
 	list-style: none;
-}
-.chatBotLi{
-	
-}
-.boatAnswer{
-	
-	border-radius: 6px;
-    background-color: #fff;
-    box-shadow: 0 1px 11px rgba(0,0,0,0.1);
-    line-height: 22px;
-    letter-spacing: -0.5px;
-    color: #555;
-    left: 0;
+	padding-left: 0;
 }
 
-
-.userLi{
+.liList{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     line-height: inherit;
     word-break: break-word;
     margin-top: 22px;
-    text-align: right;
+    display: grid;
 }
-.userQuestion{
+
+.chatBotImg{
+	width: 45px;
+	height: 45px;
+	float: left;
+}
+
+.chatBotDiv{
+padding-left : 45px;
+}
+
+.chatBotSpan{
+    text-align: left;
+    display: block;
+}
+
+
+
+.chatBotResult{
 	border-radius: 6px;
     background-color: #fff;
-    box-shadow: 0 1px 11px rgba(0,0,0,0.1);
+    box-shadow: 4px 5px 5px 3px rgba(0,0,0,0.1);
     line-height: 22px;
     letter-spacing: -0.5px;
     color: #555;
-    right: 0;
+    left: 0;
+    float: left;
 }
 
-.chatBotFooterContainer{
+.profImg{
+    width: 35px;
+    height: 35px;
+    margin-right: 3px;
+    margin-bottom: 5px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    border-radius: 100%;
 	float: right;
 }
 
-.userInput{
-    position: relative;
+.userSpan{
+    text-align: right;
+    display: block;
+}
+
+.userResult{
+	border-radius: 6px;
+    background-color: #fff;
+    box-shadow: 4px 5px 5px 3px rgba(0,0,0,0.1);
+    line-height: 22px;
+    letter-spacing: -0.5px;
+    color: #555;
+    left: 0;
+    float: right;
+}
+.chatBotFooter{
+    border-top: 1px solid silver;
     width: 100%;
+    height: 120px;
+    bottom: 5px;
+    text-align: center;
+}
+.chatBotFooterBox{
+	
+}
+
+.questionBtn{
+    position: relative;
+    float: right;
+}
+
+.userInput{
+	float : right;
+    position: relative;
+    width: 300px;
     height: 22px;
     max-height: 80px;
     padding: 0;
@@ -74,7 +127,5 @@
     box-sizing: border-box;
     overflow-y: auto;
     resize: none;
-}
-.questionBtn{
-    position: absolute;
+    border-radius: 6px;
 }
