--- a/src/main/webapp/resources/chatBot/css/chatBotStyle.css
+++ b/src/main/webapp/resources/chatBot/css/chatBotStyle.css
@@ -1,5 +1,10 @@
 @charset "UTF-8";
 
+body{
+	margin: 0;
+	padding: 0;
+}
+
 .chatBotRoom{
 	background-color : gray;
 	width: 500px;
@@ -46,7 +51,12 @@
 	height: 45px;
 	float: left;
 }
-
+p.pchatBot {
+    margin-top: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-bottom: 3px;
+}
 .chatBotDiv{
 padding-left : 45px;
 }
@@ -67,6 +77,7 @@ padding-left : 45px;
     color: #555;
     left: 0;
     float: left;
+    
 }
 
 .profImg{
@@ -95,6 +106,9 @@ padding-left : 45px;
     color: #555;
     left: 0;
     float: right;
+    margin-top: 20px;
+    margin-left: 49px;
+    margin-right: 10px;
 }
 .chatBotFooter{
     border-top: 1px solid silver;
@@ -104,7 +118,8 @@ padding-left : 45px;
     text-align: center;
 }
 .chatBotFooterBox{
-	
+	margin-top: 10px;
+	margin-right: 10px;	
 }
 
 .questionBtn{
@@ -115,9 +130,8 @@ padding-left : 45px;
 .userInput{
 	float : right;
     position: relative;
-    width: 300px;
-    height: 22px;
-    max-height: 80px;
+    width: 434px;
+    height: 99px;
     padding: 0;
     border: none;
     font-size: 14px;
@@ -127,5 +141,6 @@ padding-left : 45px;
     box-sizing: border-box;
     overflow-y: auto;
     resize: none;
-    border-radius: 6px;
+    border-radius: 3px;
+    margin-right: 5px;
 }
