--- a/src/main/webapp/resources/header/css/headerStyle.css
+++ b/src/main/webapp/resources/header/css/headerStyle.css
@@ -1,6 +1,5 @@
 @CHARSET "UTF-8";
 
-
 ul, ol, dl, li, dd, dt {margin:0; margin:0}
 a:link {text-decoration: none;}
 a:visited {text-decoration: none;}
@@ -164,6 +163,10 @@ a.two-menu:active{
 .imgRight{
 	width: 50px;
 	height: 50px;
+}
+
+.rightImg{
+	cursor :pointer;
 }
 
 /* 챗봇,그룹챗 마우스 액션 */
