--- a/src/main/webapp/resources/sqlEditor/css/sqlEditorStyle.css
+++ b/src/main/webapp/resources/sqlEditor/css/sqlEditorStyle.css
@@ -3,6 +3,10 @@
 	height: 745px;
 }
 
+#resultViewDiv{
+	border-bottom: 1px solid;
+}
+
 #editorView:after{
 	content: '';
 	clear: both;
@@ -35,10 +39,12 @@
     position: relative;
     width: 100%;
     height: 100%;
+    font-size: 20px;
 }
 
 #resultViewSpan{
 	margin-left: 10px;
+    font-weight: bold;
 }
 
 #worksheetView{
@@ -48,9 +54,10 @@
 
 #resultView{
 	resize: none;
-	font-weight: lighter;
-	font-size: medium;
-	color: black;
+    font-weight: bold;
+    font-size: medium;
+    color: lightgray;
+    background: black;
 }
 
 .imgBtn{
