--- a/src/main/webapp/resources/quiz/css/quizMainCss.css
+++ b/src/main/webapp/resources/quiz/css/quizMainCss.css
@@ -23,12 +23,25 @@
 	font-size: 30px;
 }
 #question{
-/* 	text-align: center; */
 	font-size: 20px;
-	margin-top: 5%;
+/* 	margin-top: 5%; */
+	height: 5%;
 }
 #gruopDiv{
-/* 	text-align: center; */
 	margin: 0px auto;
 	width: 50%;
+}
+#answer, #explain{
+	margin-top: 3%;
+	font-size: 20px;
+}
+
+#disabledInput{
+	height: 300px;
+    font-size: 20px;
+    overflow: hidden;
+}
+#insertOXBtn{
+    margin-left: 94%;
+    margin-top: 2%;
 }
