--- a/src/main/webapp/resources/sqlEditor/css/sqlEditorStyle.css
+++ b/src/main/webapp/resources/sqlEditor/css/sqlEditorStyle.css
@@ -1,4 +1,23 @@
 @charset "UTF-8";
+
+#resultViewSpan{
+	color: red;
+}
+
+#groupDives{
+	position: relative;
+}
+
+.groupDiv{
+	position: absolute;
+	left: 0;
+	top: 0;
+}
+
+#scriptViewArea{
+	display: none;
+}
+
 #editorView{
 	height: 745px;
 }
@@ -16,7 +35,7 @@
 
 #leftBar{
 	float: left;
-	width: 17%;
+	width: 19%;
 	height: 745px;
 	border-bottom: 1px solid;
 	border-left: 1px solid;
@@ -25,14 +44,14 @@
 
 #worksheet{
 	float: left;
-	width: 78%;
+	width: 76%;
 	height: 745px;
 	border: 1px solid;
 }
 
 #sqlEditorView {
 	width: 100%;
-    height: 70%;
+    height: 60%;
 }
 
 #editor {
@@ -42,9 +61,18 @@
     font-size: 20px;
 }
 
-#resultViewSpan{
-	margin-left: 10px;
+.resultSpans{
     font-weight: bold;
+	cursor: pointer;
+	margin-left: 10px;
+	margin-right: 10px;
+}
+
+#clearSpan{
+	font-weight: bold;
+	cursor: pointer;
+	margin-left: 10px;
+	margin-right: 10px;
 }
 
 #worksheetView{
@@ -52,7 +80,15 @@
 	resize: none;
 }
 
-#resultView{
+#resultViewArea{
+	resize: none;
+    font-weight: bold;
+    font-size: medium;
+    color: lightgray;
+    background: black;
+}
+
+#scriptViewArea{
 	resize: none;
     font-weight: bold;
     font-size: medium;
