--- a/src/main/webapp/resources/header/css/headerStyle.css
+++ b/src/main/webapp/resources/header/css/headerStyle.css
@@ -15,19 +15,34 @@ header {
 	font-size : 12px; font-weight: bold;
 	
 }
-
+.navLogo{
+    position: absolute;
+    padding-left: 8px;
+}
+#logo{
+	width: 40px; 
+	height: 40px;
+}
+.headerContainer{
+    width: 100%;
+    height: 38px;
+    border-bottom: 1px solid #EAEAEA;
+}
 .header-right{
-	margin-right : 20px;
-	word-spacing : 10px;
-	float: right;
-	clear: both;
-	
+    padding-top: 10px;
+    margin-right: 19px;
+    word-spacing: 11px;
+    float: right;
+    text-align: right;
+    clear: both;
+    width: 10%;
+    height: 30px;
 }
 
 /* MyPage, 로그아웃 */
 .aHeader{
 	text-decoration: none;	
-	color: silver;
+	color: #EAEAEA;
 }
 
 /* 프로필사진 */
@@ -57,8 +72,6 @@ a.aHeader:HOVER{
 a.aHeader:ACTIVE{
 	color:black;
 }
-
-
 /* 헤더 */
 
 
