--- a/src/main/webapp/resources/sqlEditor/css/rightClickTablePackage.css
+++ b/src/main/webapp/resources/sqlEditor/css/rightClickTablePackage.css
@@ -38,3 +38,14 @@
 .tablePackageMenu li:hover span {
   color: #FFFFFF;
 }
+.tableManagerText {
+	width : 100px;
+	height : 20px;
+	margin: 1px;
+}
+.tableManagerSelectBox {
+	width : 100px;
+	height : 24px;
+	margin: 1px;
+	padding: 3px;
+}
