--- a/src/main/webapp/resources/quiz/css/quizMainCss.css
+++ b/src/main/webapp/resources/quiz/css/quizMainCss.css
@@ -41,7 +41,7 @@
     font-size: 20px;
     overflow: hidden;
 }
-#insertOXBtn{
-    margin-left: 94%;
+#insertBtn,#updateOXBtn,#updateOXBtnDB{
+    margin-left: 91%;
     margin-top: 2%;
 }
