--- a/src/main/webapp/resources/footer/css/footerStyle.css
+++ b/src/main/webapp/resources/footer/css/footerStyle.css
@@ -1,9 +1,9 @@
 @charset "UTF-8";
 /* footer */
 footer {
-	border-top : 1px solid silver;
-	width: 100%;
-	height: 50px;
-	bottom: 5px;
-	text-align: center;
+    border-top: 1px solid silver;
+    text-align: center;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
 }
