--- a/src/main/webapp/resources/main/css/mainBodyStyle.css
+++ b/src/main/webapp/resources/main/css/mainBodyStyle.css
@@ -24,8 +24,36 @@
 	height: 369px;
 }
 #rightLayout{
-	background-color: red;
+/* 	background-color: red; */
 	width: 50%;
 	height: 738px;
 	float:left
+}
+.itNewsDiv{
+	margin-bottom: 39px;
+}
+.itNewsImg{
+    width: 210px;
+    float: left;
+    margin-right: 20px;
+    margin-left: 20px;
+}
+.itNewsTitle{
+	color: black;
+    font-weight: bold;
+    margin-bottom: 25px;
+}
+.itNewsContent{
+	color: gray;
+    font-weight: normal;
+    font-size: 15px;
+}
+#itNewsTitle{
+	text-align: center;
+    margin-bottom: 60px;
+    color: black;
+}
+#itNewsSpan{
+	font-weight: bold;
+	font-size: 5.0em;
 }
