--- a/src/main/webapp/resources/main/css/mainCss.css
+++ b/src/main/webapp/resources/main/css/mainCss.css
@@ -4,7 +4,7 @@
 	margin-left: 100px;
     margin-right: 100px;
     height: auto;
-    background-color: #EAEAEA;
+/*     background-color: #EAEAEA; */
     
 }
 
