겹치는 코드 수정 / 디자인 개선

--- a/src/main/webapp/resources/sqlEditor/css/rightClickSequence.css
+++ b/src/main/webapp/resources/sqlEditor/css/rightClickSequence.css
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 
+#seqLegend{
+	text-align: center;
+}
+
 .sequenceMenu {
   display: none;
   position: absolute;
@@ -37,4 +41,11 @@
 
 .sequenceMenu li:hover span {
   color: #FFFFFF;
+}
+
+#seqModal{
+	background-color: yellow;
+    margin-top: 7%;
+    margin-left: 22%;
+    width: 20%;
 }
