퀴즈 주관식 read, insert, update 구현 완료
미완
- update
- CSS 부족

- doc주석의 작성자 수정

--- a/src/main/webapp/resources/quiz/css/quizMainCss.css
+++ b/src/main/webapp/resources/quiz/css/quizMainCss.css
@@ -35,13 +35,17 @@
 	margin-top: 50px;
 	font-size: 20px;
 }
+#explain{
+	display: flex;
+}
 #answer{
 	display: inline-block;	
+	width : 100%;
 }
 #disabledInput{
 	height: 300px;
     font-size: 20px;
-    overflow: hidden;
+/*     overflow: hidden; */
 }
 #insertBtn,#updateOXBtn,#updateOXBtnDB{
     margin-left: 91%;
