--- a/src/main/webapp/resources/sqlEditor/css/sqlEditorStyle.css
+++ b/src/main/webapp/resources/sqlEditor/css/sqlEditorStyle.css
@@ -118,15 +118,15 @@
 	cursor: pointer;
 }
 
-#addImg{
-	margin-left: 470px;
+#addImg, #addImg2{
+	margin-left: 800px;
 }
 
 /* The Modal (background) */
 .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    z-index: 2; /* Sit on top */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
@@ -158,4 +158,18 @@
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+
+#worksheet {
+	position:relative;
+}
+
+#hiddenDiv {
+	position:absolute; 
+	left:0;
+	top:0; 
+	width:100%; 
+	height:446px; 
+	background:transparent; 
+	z-index:1;
 }
