--- a/src/main/webapp/resources/sqlEditor/css/sqlEditorStyle.css
+++ b/src/main/webapp/resources/sqlEditor/css/sqlEditorStyle.css
@@ -160,6 +160,19 @@
     cursor: pointer;
 }
 
+.addClose{
+	color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.addClose:hover, .addClose:focus{
+	color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 #worksheet {
 	position:relative;
 }
@@ -172,4 +185,60 @@
 	height:446px; 
 	background:transparent; 
 	z-index:1;
+}
+#templateBtnDiv{
+	display: inline-block;
+	margin-left: 65px;
+	float: left;
+	padding-top: 80px;
+}
+
+#templateTableDiv{
+	width : 80%;
+	height : 300px;
+	display: inline-block;
+	overflow-y: scroll;
+	float:left;
+}
+
+#templateAdd{
+	margin-bottom: 5px;
+}
+
+#templateUpdate{
+	margin-bottom: 5px;
+}
+
+#templateDelete{
+	margin-bottom: 5px;
+}
+
+.tmpOriginal{
+	text-align: center;
+}
+
+.templateRow{
+	cursor: pointer;
+}
+
+#tempAdd{
+	display: inline;
+}
+
+#tempCancle{
+	display: inline;
+	margin-left: 4px;
+}
+
+#tempBtnDiv{
+	padding-top : 10px;
+    margin-left: 770px;
+}
+
+#tempAddView{
+	font-size: 20px;
+}
+
+#inputAbb, #inputOriArea{
+	font-size: 20px;
 }
