--- a/src/main/webapp/resources/layout/css/layoutStyle.css
+++ b/src/main/webapp/resources/layout/css/layoutStyle.css
@@ -3,6 +3,8 @@
 .mycontainer{
 	margin-top : 50px;
 	margin-bottom : 10px;
-	width: 100%;
-	height: auto;
+    margin-left: 15%;
+    margin-right: 15%;
+	width: 70%;
+    height: auto;
 }
