--- a/src/main/webapp/resources/header/css/headerStyle.css
+++ b/src/main/webapp/resources/header/css/headerStyle.css
@@ -90,6 +90,7 @@ a.aHeader:ACTIVE{
 	overflow : hidden; 
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 	font-size : 20px; font-weight: bold;
+	padding-bottom: 20px;
 }
 
 .ul-header-one {}
@@ -110,7 +111,7 @@ line-height: 30px;
 .ul-header-one li{
 	list-style: none;
 	outline: 30px; 
-	margin:0 30px;
+	margin:0 60px;
 	display: inline-block;
 	
 }
