--- a/src/main/webapp/resources/header/css/headerStyle.css
+++ b/src/main/webapp/resources/header/css/headerStyle.css
@@ -17,7 +17,7 @@ header {
 }
 .navLogo{
     position: absolute;
-    padding-left: 8px;
+    padding-left: 30px;
 }
 #logo{
 	width: 40px; 
@@ -59,10 +59,10 @@ header {
 
 
 a.aHeader:LINK{
-	color: silver;
+	color: #717171;
 }
 a.aHeader:VISITED{
-	color: silver;
+	color: #717171;
 }
 a.aHeader:HOVER{
 	color:black;
