채팅 구현 열심히 하고 있어요...

--- a/src/main/webapp/resources/chatting/css/chatting.css
+++ b/src/main/webapp/resources/chatting/css/chatting.css
@@ -2,7 +2,7 @@
 #message{
 	width : 498px;	
 }
-.alert-info{
+.alert-info,.userInfo{
     float: right;
     margin-right: 10px;
 }
@@ -12,4 +12,7 @@
 }
 #data{
 	overflow-y: auto;
+}
+.dt{
+	font-size: 10px;
 }
