도메인 기능
- 도메인 리스트 조회
- 유저 도메인 추가, 수정, 삭제

* 워크시트 내에서 실행 기능 구현 예정

--- a/src/main/webapp/resources/sqlEditor/css/sqlEditorStyle.css
+++ b/src/main/webapp/resources/sqlEditor/css/sqlEditorStyle.css
@@ -191,6 +191,14 @@
 	z-index:1;
 }
 
+.domainRow{
+	cursor: pointer;
+}
+
+.domainType{
+	text-align: center;
+}
+
 
 #tdTable{
 	text-align: center;
