인덱스 편집 수정작업 / 챗봇 UI 개선 / 관리자 메인화면 수정작업

--- a/src/main/webapp/resources/sqlEditor/css/rightClickIndex.css
+++ b/src/main/webapp/resources/sqlEditor/css/rightClickIndex.css
@@ -51,6 +51,14 @@
 	margin-left : 100px;
     width: 400px;
 }
+#updateSelect_1{
+    width: 50px;
+    border: none;
+}
+#td_select{
+	margin-left : 100px;
+    width: 400px;
+}
 
 #pAndm{
 	float: right;
@@ -93,4 +101,9 @@
 	width: 17px;
 	height: 17px;
 	cursor: pointer;	
+}
+
+#selectedTable_name:disabled{
+	background: #dddddd;
+    color: black;
 }
