--- a/src/main/webapp/resources/chatBot/css/chatBotStyle.css
+++ b/src/main/webapp/resources/chatBot/css/chatBotStyle.css
@@ -106,9 +106,9 @@ padding-left : 45px;
     color: #555;
     left: 0;
     float: right;
-    margin-top: 20px;
-    margin-left: 49px;
-    margin-right: 10px;
+    margin-top: 2%;
+    margin-left: 20%;
+    margin-right: 2%;
 }
 .chatBotFooter{
     border-top: 1px solid silver;
