--- a/src/main/webapp/resources/header/css/headerStyle.css
+++ b/src/main/webapp/resources/header/css/headerStyle.css
@@ -29,13 +29,15 @@ header {
     border-bottom: 1px solid #EAEAEA;
 }
 .header-right{
-    padding-top: 10px;
-    margin-right: 19px;
+    box-shadow: inset 0 -1px 0 0 #e5e5e5;
+    padding-top: 2px;
+    /* margin-right: 19px; */
     word-spacing: 11px;
+    padding-right: 0.5%;
     float: right;
     text-align: right;
     clear: both;
-    width: 10%;
+    width: 100%;
     height: 30px;
 }
 
@@ -73,96 +75,96 @@ a.aHeader:ACTIVE{
 	color:black;
 }
 /* 헤더 */
-
-
-#user{
-	width: 20px;
-	height: 20px;
-	display: inline-block;
+.menubar{
+    box-shadow: inset 0 -1px 0 0 #e5e5e5;
+    font: 67.5% "Lucida Sans Unicode", "Bitstream Vera Sans", "Trebuchet Unicode MS", "Lucida Grande", Verdana, Helvetica, sans-serif;
+    font-size: 21px;
+    font-weight: bold;
 }
 
-
-/* 네비 */
-.navMenu {
-	width: 100%;
-	border-bottom : 1px solid silver;
-	text-align: center;
-	overflow : hidden; 
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-	font-size : 20px; font-weight: bold;
-	padding-bottom: 20px;
+.menubar ul{
+    height: 50px;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    padding-left: 35%;
 }
 
-.ul-header-one {}
-.ul-header-one:after {content:''; display:block; zoom:1; clear:both;}
-.one:hover ul{display: block;}
+.menubar li{
+float:left;
+padding:0px;
+}
 
-.ul-header-two{display: none;height:auto;
+.menubar li a{
+    /* background: rgb(109,109,109); */
+    /* color: #cccccc; */
+    display: block;
+    /* font-weight: normal; */
+    line-height: 50px;
+    margin: 0px;
+    padding: 0px 25px;
+    text-align: center;
+    text-decoration: none;
+}
+
+.menubar li a:hover, .menubar ul li:hover a{
+background: rgb(71,71,71);
+color:black;
+text-decoration:none;
+}
+
+.menubar li ul{
+background: rgb(109,109,109);
+display:none; /* 평상시에는 드랍메뉴가 안보이게 하기 */
+height:auto;
 padding:0px;
 margin:0px;
 border:0px;
 position:absolute;
 width:200px;
 z-index:200;
-line-height: 30px;
+/*top:1em;
+/*left:0;*/
 }
 
-
-.ul-header-one li{
-	list-style: none;
-	outline: 30px; 
-	margin:0 60px;
-	display: inline-block;
-	
+.menubar li:hover ul{
+display:block; /* 마우스 커서 올리면 드랍메뉴 보이게 하기 */
 }
 
-.li-two{
-	line-height: 30px;
-	padding: 0;
-	margin: 0 ;
-	display : block !important;
-	clear : both;
-	text-align: left;
-	
+.menubar li li {
+background: rgb(109,109,109);
+display:block;
+float:none;
+margin:0px;
+padding:0px;
+width:200px;
 }
 
-.two-menu{
-	width: 100%;
-	text-align: center;
-	overflow : hidden; 
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-	font-size : 20px; font-weight: bold;
-	line-height: 10px;
-	color: black;
+.menubar li:hover li a{
+background:none;
 }
 
-
-a.aNav {
-	text-decoration: none;	
-	color:black;
-	line-height: 40px;
-	display:block;
-	
+.menubar li ul a{
+display:block;
+height:50px;
+font-size:12px;
+font-style:normal;
+margin:0px;
+padding:0px 10px 0px 15px;
+text-align:left;
 }
 
-/* 메뉴 마우스 액션 */
-a.aNav:HOVER{
-	color:black;
-	padding-bottom : 2px;
-	border-bottom: 2px solid black;
-	}
-a.aNav:ACTIVE{
-	color:black;
+.menubar li ul a:hover, .menubar li ul li:hover a{
+background: rgb(71,71,71);
+border:0px;
+color:#ffffff;
+text-decoration:none;
 }
 
-a.two-menu:HOVER{
-	color:black;
-	padding-bottom : 5px;
+.menubar p{
+clear:left;
 }
 
-a.two-menu:active{
-	color:black;
-}
 
 /* 챗봇 */
 .chatbot{
