--- a/src/main/webapp/resources/header/css/headerStyle.css
+++ b/src/main/webapp/resources/header/css/headerStyle.css
@@ -1,33 +1,11 @@
 @CHARSET "UTF-8";
 
-ul, ol, dl, li, dd, dt {margin:0; margin:0}
+ul, ol, dl, li, dd, dt {margin:0; margin:0;}
+a{text-decoration: none;}
 a:link {text-decoration: none;}
 a:visited {text-decoration: none;}
+ul a{text-decoration: none;}
 
-
-/* 헤더 */
-header {
-	background-color : white;
-	display: inline-block;
-	width: 100%;
-	margin-top: 5px;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-	font-size : 12px; font-weight: bold;
-	
-}
-.navLogo{
-    position: absolute;
-    padding-left: 30px;
-}
-#logo{
-	width: 40px; 
-	height: 40px;
-}
-.headerContainer{
-    width: 100%;
-    height: 38px;
-    border-bottom: 1px solid #EAEAEA;
-}
 .header-right{
     box-shadow: inset 0 -1px 0 0 #e5e5e5;
     padding-top: 2px;
@@ -45,6 +23,8 @@ header {
 .aHeader{
 	text-decoration: none;	
 	color: #EAEAEA;
+	width : 0;
+	transition: all 0.5s;
 }
 
 /* 프로필사진 */
@@ -66,7 +46,10 @@ a.aHeader:LINK{
 a.aHeader:VISITED{
 	color: #717171;
 }
+
+
 a.aHeader:HOVER{
+	width : 100%;
 	color:black;
 	padding-bottom : 5px;
 	border-bottom: 2px solid black;
@@ -74,99 +57,33 @@ a.aHeader:HOVER{
 a.aHeader:ACTIVE{
 	color:black;
 }
-/* 헤더 */
-.menubar{
-    box-shadow: inset 0 -1px 0 0 #e5e5e5;
-    font: 67.5% "Lucida Sans Unicode", "Bitstream Vera Sans", "Trebuchet Unicode MS", "Lucida Grande", Verdana, Helvetica, sans-serif;
-    font-size: 21px;
-    font-weight: bold;
+/* 헤더 최상단 우측 */
+header {
+	width:100%;
+	display: inline-block;
+   	padding: 0 30px 30px;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+	font-weight: bold;
+	
 }
 
-.menubar ul{
-    height: 50px;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    padding-left: 35%;
-}
+/* 헤더 네비*/
 
-.menubar li{
-float:left;
-padding:0px;
-}
-
-.menubar li a{
-    /* background: rgb(109,109,109); */
-    /* color: #cccccc; */
-    display: block;
-    /* font-weight: normal; */
-    line-height: 50px;
-    margin: 0px;
-    padding: 0px 25px;
-    text-align: center;
-    text-decoration: none;
-}
-
-.menubar li a:hover, .menubar ul li:hover a{
-background: rgb(71,71,71);
-color:black;
-text-decoration:none;
-}
-
-.menubar li ul{
-background: rgb(109,109,109);
-display:none; /* 평상시에는 드랍메뉴가 안보이게 하기 */
-height:auto;
-padding:0px;
-margin:0px;
-border:0px;
-position:absolute;
-width:200px;
-z-index:200;
-/*top:1em;
-/*left:0;*/
-}
-
-
-.menubar li:hover ul{
-display:block; /* 마우스 커서 올리면 드랍메뉴 보이게 하기 */
-}
-
-.menubar li li {
-background: rgb(109,109,109);
-display:block;
-float:none;
-margin:0px;
-padding:0px;
-width:200px;
-}
-
-.menubar li:hover li a{
-background:none;
-}
-
-.menubar li ul a{
-display:block;
-height:50px;
-font-size:12px;
-font-style:normal;
-margin:0px;
-padding:0px 10px 0px 15px;
-text-align:left;
-}
-
-.menubar li ul a:hover, .menubar li ul li:hover a{
-background: rgb(71,71,71);
-border:0px;
-color:#ffffff;
-text-decoration:none;
-}
-
-.menubar p{
-clear:left;
-}
-
-
+header #lnb { position: absolute; z-index: 20; width: 98%; box-sizing: border-box;}
+header #lnb nav {position:relative; border-bottom: 1px solid #e5e5e5; text-align: center; font-size: 0;}
+header #lnb nav > ul { display:inline-block; overflow: hidden; height : 59px; transition : all 0.5s;}
+header #lnb nav > ul:hover{overflow: visible;}
+header #lnb nav + div { position:absolute; left:0; top :0; width:98%; height: 0; background-color: #fff; opacity: 0; box-shadow: inset 0 -1px 0 0 #e5e5e5; transition : all 0.5s;}
+header #lnb nav:hover + div{height: 250px; opacity: 1;}
+header #lnb nav > ul > li {display: inline-block; position: relative;}
+header #lnb nav > ul > li > a{ display:block; position : relative; width: 180px; height : 60px; font-size: 18px; color: black; line-height: 60px; }
+header #lnb nav > ul > li > a:after {content: ""; position: absolute; left : 50%; bottom: -1px; width: 0; height: 2px; background: black; transition : all 0.5s;}
+header #lnb nav > ul > li:hover > a:after{ left: 0; width: 100%;}
+header #lnb nav > ul ul { position: absolute; width : 100%; height:190px; padding: 22px 0 0; text-align: center; opacity: 0; transition : all 0.5s;}
+header #lnb nav > ul:hover ul {display: block; opacity: 1;}
+header #lnb nav > ul ul li{line-height: 39px;}
+header #lnb nav > ul ul a{position: relative; font-size: 14px; color : black; transition : all 0.5s;}
+header #lnb nav > ul ul a:hover{color: #e5e5e5;}
 /* 챗봇 */
 .chatbot{
 	position: fixed;
