--- a/src/main/webapp/resources/sqlEditor/css/rightClickTable.css
+++ b/src/main/webapp/resources/sqlEditor/css/rightClickTable.css
@@ -1,5 +1,16 @@
 @charset "UTF-8";
-
+.ckDiv {
+    border: 1px solid black;
+    width: 100px;
+    height: 30px;
+    float: left;
+    margin: 3px;
+    text-align: center;
+    padding: 3px;
+    background: black;
+    border-radius: 10px;
+    color: white;
+}
 .tableMenu {
   display: none;
   position: absolute;
