DB계정 모달 버튼 색상 번경

--- a/src/main/webapp/resources/sqlEditor/css/sqlEditorStyle.css
+++ b/src/main/webapp/resources/sqlEditor/css/sqlEditorStyle.css
@@ -272,3 +272,19 @@
 #tempUpdate, #tempUpdateCancle{
 	display: inline;
 }
+
+#addAccountBtn {
+	margin-left: 840px;
+}
+
+#accountDeleteBtn{
+	margin-left: 840px;
+}
+
+#accountPwFindBtn{
+	margin-left: 840px;
+}
+
+#accountPwUpdateBtn{
+	margin-left: 840px;
+}
