--- a/src/main/webapp/resources/history/css/historyDetail.css
+++ b/src/main/webapp/resources/history/css/historyDetail.css
@@ -5,6 +5,10 @@
 }
 
 .tableCon{
-    position: relative;
-    max-height: 100%;
+    margin-top: 2%;
+    margin-bottom: -4%;
+    /* margin-left: 0%; */
+    /* margin-right: 15%; */
+    width: 100%;
+    min-height: 709px;
 }
