--- a/src/main/webapp/resources/header/css/headerStyle.css
+++ b/src/main/webapp/resources/header/css/headerStyle.css
@@ -89,7 +89,7 @@ header #lnb nav > ul ul a:hover{color: #e5e5e5;}
 	position: fixed;
 	bottom : 170px;
 	right: 30px;
-	
+	z-index: 1;
 }
 
 
@@ -122,5 +122,6 @@ transform:scale(1.1);
 	position: fixed;
 	bottom : 100px;
 	right: 30px;
+	z-index: 1;
 }
 
