--- a/src/main/webapp/resources/chatting/css/chatting.css
+++ b/src/main/webapp/resources/chatting/css/chatting.css
@@ -14,19 +14,21 @@
     margin-top: 4px;
     float: right;
     border-radius: 15px;
-    padding: 0px 13px 0px 13px;
+    padding: 2px 13px 2px 13px;
     max-width: 60%;
     display: inline;
+    word-break: break-all;
 }
 .Ymessage{
     background-color: #f1f0f0;;
     margin-top: -10px;
     float: left;
     border-radius: 15px;
-    padding: 0px 13px 0px 13px;
+    padding: 2px 13px 2px 13px;
     max-width: 60%;
     display: inline;
     color: black;
+    word-break: break-all;
 }
 .myDiv{
 	width: 100%;
@@ -56,18 +58,18 @@
     line-height: 60px;
     font-size: 25px;
     font-weight: 900;
-    margin-left: 40%;
+    margin-left: 45%;
     display: inline;
 }
 .myDt{
-	font-size: 10px;
-	color: #f1f0f0;
+	font-size: 12px;
+    color: gray;
 	display: inline;
 	margin-right: 10px;
 }
 .youDt{
-	font-size: 10px;
-	color: #f1f0f0;
+	font-size: 12px;
+    color: gray;
 	display: inline;
 	margin-right: 10px;
 }
@@ -102,6 +104,8 @@
 	border: none;
 	color: #0084FF;
 }
+
+/* 스크롤바 CSS */
 ::-webkit-scrollbar{
 	width : 7px;
 	background-color: white;
