--- a/src/main/webapp/resources/quiz/css/quizMainCss.css
+++ b/src/main/webapp/resources/quiz/css/quizMainCss.css
@@ -26,6 +26,11 @@
 	font-size: 20px;
 	height: 20px;
     margin-bottom: 5%;
+    display: -webkit-box;
+}
+.question{
+	font-weight: bold;
+	padding-top: 2%;
 }
 #gruopDiv{
 	margin: 0px auto;
@@ -35,8 +40,11 @@
     padding: 19px;
     margin-top: 73px;
 }
-#answer, #explain, #multiple{
+#explain{
 	margin-top: 50px;
+	font-size: 20px;
+}
+#answer, #multiple{
 	font-size: 20px;
 }
 #explain{
@@ -47,8 +55,9 @@
 	width : 100%;
 }
 #disabledInput{
-	height: 300px;
+    height: 205px;
     font-size: 20px;
+    margin-top: -4%;
 }
 .explanMultiple{
     margin-top: -3%;
@@ -56,10 +65,9 @@
 }
 #updateOXBtn{
     margin-left: 76%;
-    margin-top: 2%;
 }
 #updateOXBtnDB{
-	margin-left: 68%;
+	margin-left: 81%;
     margin-top: 2%;
 }
 
@@ -76,7 +84,6 @@ ol{
     width: 90%;
 }
 #example{
-	margin-top: 50px;
 	margin-left: -15px;
 	font-size: 20px;
     margin-bottom: 4%;
@@ -87,11 +94,11 @@ ol{
     padding: 19px;
 }
 #updateBtnDB{
-    margin-left: 68%;
+    margin-left: 82%;
     margin-top: 2%;
 }
 .btnGroup{
-	margin-right: 16%;
+/* 	margin-right: 16%; */
 }
 #multipleBtn{
     margin-left: 44%;
@@ -99,15 +106,29 @@ ol{
 }
 #quiz_answer{
     display: inline;
-    width: 6%;
+    width: 39%;
 }
 #multipleUpdateBtn{
-    margin-left: 43%;
+	margin-left: 67%;;
 }
 #insertBtn{
 	margin-left: 68%;
 	margin-top: 1%;
 }
+#multiInsertBtn{
+	margin-left: 68%;
+	margin-top: 1%;
+}
 .example_content{
     font-size: 20px;
+}
+#quizImg{
+    width: 987px;
+    height: 131px;
+    background-image: url(/img/quizImg.png);
+    margin-left: 14%;
+    text-align: right;
+    font-size: 57px;
+    color: white;
+    padding-top: 43px;
 }
