--- a/src/main/webapp/resources/header/css/headerStyle.css
+++ b/src/main/webapp/resources/header/css/headerStyle.css
@@ -5,8 +5,11 @@ a{text-decoration: none;}
 a:link {text-decoration: none;}
 a:visited {text-decoration: none;}
 ul a{text-decoration: none;}
-.mcl{
-	
+.mcl:hover{
+	cursor: pointer;
+}
+.profile:hover{
+	box-shadow: 0 2px 5px;
 }
 .mclna{
 	
