--- a/src/main/webapp/resources/header/css/headerStyle.css
+++ b/src/main/webapp/resources/header/css/headerStyle.css
@@ -1,5 +1,13 @@
 @CHARSET "UTF-8";
 
+body {
+	font-family: 'NanumSquareRound',sans-serif;
+}
+
+#header {
+	font-family: 'NanumSquareRound',sans-serif;
+}
+
 ul, ol, dl, li, dd, dt {margin:0; margin:0;}
 a{text-decoration: none;}
 a:link {text-decoration: none;}
